// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip can be rich 1`] = `
<DocumentFragment>
  <div
    class="mdc-tooltip-wrapper--rich"
  >
    <span
      aria-describedby="123456"
      class=""
      data-tooltip-id="123456"
    >
      test
    </span>
    <div
      aria-hidden="true"
      class="mdc-tooltip--rich mdc-tooltip"
      id="123456"
      role="tooltip"
    >
      <div
        class="mdc-tooltip__surface mdc-tooltip__surface-animation"
      >
        <div
          class="mdc-tooltip__content"
        >
          <div>
            tooltip
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip can be rich and persistent 1`] = `
<DocumentFragment>
  <div
    class="mdc-tooltip-wrapper--rich"
  >
    <span
      aria-describedby="123456"
      class=""
      data-tooltip-id="123456"
    >
      test
    </span>
    <div
      aria-hidden="true"
      class="mdc-tooltip--rich mdc-tooltip"
      data-mdc-tooltip-persistent="true"
      id="123456"
      role="tooltip"
    >
      <div
        class="mdc-tooltip__surface mdc-tooltip__surface-animation"
      >
        <div
          class="mdc-tooltip__content"
        >
          <div>
            tooltip
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip can display arrow 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="mdc-tooltip rmwc-tooltip--show-arrow"
    id="123456"
    role="tooltip"
  >
    <div
      class="mdc-tooltip__surface mdc-tooltip__surface-animation"
    >
      tooltip
    </div>
  </div>
  <fragment
    class=""
  >
    <span
      aria-describedby="123456"
      class=""
      data-tooltip-id="123456"
    >
      test
    </span>
  </fragment>
</DocumentFragment>
`;

exports[`Tooltip renders 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="mdc-tooltip mdc-tooltip--shown mdc-tooltip--showing"
    data-mdc-tooltip-persistent="true"
    id="123456"
    role="tooltip"
    style="top: 4px; left: 0px;"
  >
    <div
      class="mdc-tooltip__surface mdc-tooltip__surface-animation"
      style="transform-origin: center top;"
    >
      tooltip
    </div>
  </div>
  <fragment
    class=""
  >
    <span
      aria-describedby="123456"
      class=""
      data-tooltip-id="123456"
    >
      test
    </span>
  </fragment>
</DocumentFragment>
`;
